@@ -2,6 +2,7 @@ package com.example.entityapi.service;
 
 import com.example.entityapi.model.EntityGraph;
 import com.example.entityapi.repository.EntityGraphRepository;
+import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,25 +17,25 @@ import java.util.UUID;
 @Service
 public class EntityGraphService
 {
-	@Autowired
-	private EntityGraphRepository repository;
+    @Autowired
+    private EntityGraphRepository repository;
 
-	private Logger logger = LoggerFactory.getLogger(EntityGraphService.class);
+    private Logger logger = LoggerFactory.getLogger(EntityGraphService.class);
 
-	public EntityGraph createUpdate(EntityGraph graph)
-	{
-		if (graph.getId() == null || graph.getId().isBlank())
-		{
-			graph.setId(UUID.randomUUID().toString());
-		}
+    public EntityGraph createUpdate(EntityGraph graph)
+    {
+        if (StringUtils.isBlank(graph.getId()))
+        {
+            graph.setId(UUID.randomUUID().toString());
+        }
 
-		logger.debug("Create/update entity graph: " + graph.getId());
-		return repository.save(graph);
-	}
+        logger.debug("Create/update entity graph: " + graph.getId());
+        return repository.save(graph);
+    }
 
-	public void delete(String id)
-	{
-		logger.debug("Delete entity graph: " + id);
-		repository.deleteById(id);
-	}
+    public void delete(String id)
+    {
+        logger.debug("Delete entity graph: " + id);
+        repository.deleteById(id);
+    }
 }
