@@ -2,6 +2,7 @@ package com.example.entityapi.service;
 
 import com.example.entityapi.model.EntityLink;
 import com.example.entityapi.repository.EntityLinkRepository;
+import org.apache.commons.lang.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,68 +19,68 @@ import java.util.stream.Collectors;
 @Service
 public class EntityLinkService implements CrudlRestService<EntityLink>
 {
-	@Autowired
-	private EntityLinkRepository repository;
+    @Autowired
+    private EntityLinkRepository repository;
 
-	private Logger logger = LoggerFactory.getLogger(EntityLinkService.class);
+    private Logger logger = LoggerFactory.getLogger(EntityLinkService.class);
 
-	@Override
-	public Collection<EntityLink> list()
-	{
-		logger.debug("List entity links");
-		var entities = new HashSet<EntityLink>();
-		repository.findAll().forEach(entities::add);
-		return entities;
-	}
+    @Override
+    public Collection<EntityLink> list()
+    {
+        logger.debug("List entity links");
+        var entities = new HashSet<EntityLink>();
+        repository.findAll().forEach(entities::add);
+        return entities;
+    }
 
-	@Override
-	public EntityLink get(String id)
-	{
-		logger.debug("Get entity link: " + id);
-		return repository.findById(id).orElse(null);
-	}
+    @Override
+    public EntityLink get(String id)
+    {
+        logger.debug("Get entity link: " + id);
+        return repository.findById(id).orElse(null);
+    }
 
-	@Override
-	public Collection<EntityLink> getByIds(Collection ids)
-	{
-		logger.debug("Find entity links");
-		var entities = new HashSet<EntityLink>();
-		Iterable<EntityLink> results = repository.findAllById(ids);
-		results.forEach(entities::add);
-		return entities;
-	}
+    @Override
+    public Collection<EntityLink> getByIds(Collection ids)
+    {
+        logger.debug("Find entity links");
+        var entities = new HashSet<EntityLink>();
+        Iterable<EntityLink> results = repository.findAllById(ids);
+        results.forEach(entities::add);
+        return entities;
+    }
 
-	@Override
-	public EntityLink createUpdate(EntityLink entityLink)
-	{
-		if (entityLink.getId() == null || entityLink.getId().isBlank())
-		{
-			entityLink.setId(UUID.randomUUID().toString());
-		}
+    @Override
+    public EntityLink createUpdate(EntityLink entityLink)
+    {
+        if (StringUtils.isBlank(entityLink.getId()))
+        {
+            entityLink.setId(UUID.randomUUID().toString());
+        }
 
-		logger.debug("Create/update entity link: " + entityLink.getId());
-		return repository.save(entityLink);
-	}
+        logger.debug("Create/update entity link: " + entityLink.getId());
+        return repository.save(entityLink);
+    }
 
-	@Override
-	public void delete(String id)
-	{
-		logger.debug("Delete entity link: " + id);
-		repository.deleteById(id);
-	}
+    @Override
+    public void delete(String id)
+    {
+        logger.debug("Delete entity link: " + id);
+        repository.deleteById(id);
+    }
 
-	/**
-	 * Find links related to the provided entity id.
-	 * TODO Improve performance by filtering database side.
-	 *
-	 * @param id Entity id.
-	 * @return Links related to entity.
-	 */
-	public Collection<EntityLink> findEntityLinksRelatedToEntity(String id)
-	{
-		logger.debug("Find entity links related to entity: " + id);
-		return list().stream()
-					 .filter(x -> x.getFrom().getId().equals(id) || x.getTo().getId().equals(id))
-					 .collect(Collectors.toList());
-	}
+    /**
+     * Find links related to the provided entity id.
+     * TODO Improve performance by filtering database side.
+     *
+     * @param id Entity id.
+     * @return Links related to entity.
+     */
+    public Collection<EntityLink> findEntityLinksRelatedToEntity(String id)
+    {
+        logger.debug("Find entity links related to entity: " + id);
+        return list().stream()
+                     .filter(x -> x.getFrom().getId().equals(id) || x.getTo().getId().equals(id))
+                     .collect(Collectors.toList());
+    }
 }
